--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
       <p>Dedicated to creating impactful and user-friendly experiences with a focus on quality and integrity.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://github.com/climber823"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/orest-zelisko-06a638318/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/orest-zelisko/"><i class="bi bi-linkedin"></i></a>
         <a href="https://t.me/climber0823"><i class="bi bi-telegram"></i></a>
       </div>
     </div>
