--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Full-Stack Engineer</h4>
+              <h4>Freelancer</h4>
               <h5>04/2024 - Present</h5>
               <p><em>Upwork</em></p>
               <ul>
@@ -404,7 +404,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Full-Stack Developer</h4>
+              <h4>Backend Developer</h4>
               <h5>08/2020 - 05/2021</h5>
               <p><em>Berkeley Square</em></p>
               <ul>
